--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200;300;400;500;600;700&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Glegoo:wght@400;700&display=swap');
 
 * {
     margin: 0;
@@ -10,33 +10,37 @@
 }
 
 body {
-    margin: 0;
+    margin: 1% 0;
   }
 
 html {
     font-size: 4vw;
 }
 
-p {
+p, a {
+    font-family: "Glegoo", serif;
     font-size: 4.3vw;
-    font-weight: 300;
+    font-weight: 400;
     margin: 1% 0;
+    line-height: 1.2;
+    letter-spacing: -.18;
 }
 
 h3 {
-    font-weight: 400;
-    font-style: italic;
+    font-family: "Glegoo", serif;
+    font-weight: 700;
     font-size: 5.5vw;
     margin: 2% 0 0 0;
     padding: 0;
 }
 
 h2 {
+    font-size: 7vw;
     margin: 0;
     padding: 0;
     position: relative; 
     bottom: 0.1em;
-    line-height: 1.3;
+    line-height: 1;
 }
 
 header {
@@ -44,7 +48,6 @@ header {
     padding: 0;
 }
 a {
-    font-weight: 400;
     text-decoration: none;
     color: #ff6e00;
 
@@ -55,11 +58,13 @@ a:hover {
 }
 
 details {
+    letter-spacing: -.25vw;
     margin: 0;
     padding: 0;
 }
 
 details > summary {
+    letter-spacing: 0vw;
     font-weight: 700;
     font-size: 7vw;
     text-decoration: none;
@@ -69,7 +74,7 @@ details > summary {
     padding: 0;
 }
 
-details > summary:hover {
+details > summary:hover, details[open] > summary {
     text-decoration: underline 0.3vh;
 }
 
@@ -107,7 +112,26 @@ details > summary::-webkit-details-marker {
     display: none;
 }
 
+.social-link {
+    font-family: 'Oswald', sans-serif;
+    font-weight: 700;
+    
+}
+
 @media only screen and (min-width: 820px) {
+    details > summary:hover, details[open] > summary {
+        text-decoration: underline 0.4vh;
+    }
+    
+    .icon {
+    width: 4%;
+    height: 4%;
+}
+
+    .icon img {
+    width:100%; 
+}
+    
     .gallery .hm img {
         width: 32%;
         object-fit: contain;
