--- a/style.css
+++ b/style.css
@@ -18,16 +18,16 @@ html {
 }
 
 p, a {
-    font-family: "Glegoo", serif;
-    font-size: 4.3vw;
+    font-family: sans-serif;
+    font-size: 2.0vw;
     font-weight: 400;
-    margin: 1% 0;
+    margin: 2% 25% 5% 0;
     line-height: 1.2;
     letter-spacing: -.18;
 }
 
 h3 {
-    font-family: "Glegoo", serif;
+    font-family: sans-serif;
     font-weight: 700;
     font-size: 5.5vw;
     margin: 2% 0 0 0;
@@ -58,13 +58,11 @@ a:hover {
 }
 
 details {
-    letter-spacing: -.25vw;
     margin: 0;
     padding: 0;
 }
 
 details > summary {
-    letter-spacing: 0vw;
     font-weight: 700;
     font-size: 7vw;
     text-decoration: none;
@@ -86,7 +84,7 @@ details > summary::-webkit-details-marker {
 .flex {
     width: 100%;
     display: flex;
-    justify-content: space-between;
+    justify-content: flex-start;
     flex: 1;
 }
 
@@ -147,7 +145,7 @@ details > summary::-webkit-details-marker {
       }
 
     p {
-        font-size: 3.8vw;
+        font-size: 2.0vw;
     }
 
     h3 {
